<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    android:id="@+id/header"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/partial_rounded_edges"
    tools:showIn="@layout/fragment_enter_amount">

    <LinearLayout
        android:id="@+id/root_name"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="8dp"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginRight="22dp"
            android:layout_marginLeft="4dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/name"
            android:textSize="18sp"
            android:text="Demo User"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/root_name"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:id="@+id/text"
            android:text="@string/balance"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/wallet"
            android:drawablePadding="2dp"
            android:drawableStart="@drawable/wallet" />

        <TextView
            android:id="@+id/balance"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="100"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/rs"
            android:text="@string/rs"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>